WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271158
Crash under AccessibilityObject::accessibilitySecureFieldLength()
https://bugs.webkit.org/show_bug.cgi?id=271158
Summary
Crash under AccessibilityObject::accessibilitySecureFieldLength()
Chris Dumez
Reported
2024-03-18 09:20:12 PDT
Crash under AccessibilityObject::accessibilitySecureFieldLength(): ``` 10 WTFCrashWithInfo(int, char const*, char const*, int) 10 _ZN3WTF8downcastIN7WebCore25AccessibilityRenderObjectENS1_19AccessibilityObjectEEERNSt3__111conditionalIXsr3stdE10is_const_vIT0_EENS4_9add_constIT_E4typeEu14__remove_constIS8_EE4typeERS6_ ==> 10 WebCore::AccessibilityObject::accessibilitySecureFieldLength() <== 10 -[WebAccessibilityObjectWrapper accessibilityValue] 10 -[UIKitWebAccessibilityObjectWrapper accessibilityValue] ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-03-18 09:20:21 PDT
<
rdar://122375537
>
Chris Dumez
Comment 2
2024-03-18 09:22:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26052
Tyler Wilcock
Comment 3
2024-03-18 11:51:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26061
EWS
Comment 4
2024-03-18 19:13:16 PDT
Committed
276320@main
(292ff7293a5c): <
https://commits.webkit.org/276320@main
> Reviewed commits have been landed. Closing PR #26061 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug