Crash under AccessibilityObject::accessibilitySecureFieldLength() https://bugs.webkit.org/show_bug.cgi?id=271158 rdar://122375537

Reviewed by NOBODY (OOPS!).

Replace downcast<>() with dynamicDowncast<>(). The crashes indicate that
the AccessibilityObject is not guaranteed to be an AccessibilityRenderObject
when this function is called.

* Source/WebCore/accessibility/ios/AccessibilityObjectIOS.mm:
(WebCore::AccessibilityObject::accessibilitySecureFieldLength):